<resources>
    <string name="app_name">Antidot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminder">Reminder</string>
    <string name="antibiotics">Antibiotics</string>
    <string name="password_too_short">Password harus lebih dari 8 karakter</string>
    <string name="sign_in">Sign In</string>
    <string name="descript_signin">Please sign in to continue our apps</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_sign_up">Don’t have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="desct_sign_up">Please sign up to continue our apps</string>
    <string name="full_name">Full Name</string>
    <string name="birthdate">YYYY/MM/DD (Birthdate)</string>
    <string name="password_must_have_8_characters">Password must have 8 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="to_sign_in">Already have an account? Sign In</string>
    <string name="diagnosis">Diagnosis Penyakit</string>
    <string name="isi_diagnosis">Isi Diagnosis</string>
    <string name="analyze">Analyze</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_diagnosi_form">Please fill Diagnosis Form</string>
    <string name="gejala_1">Gejala 1</string>
    <string name="gejala_2">Gejala 2</string>
    <string name="gejala_3">Gejala 3</string>
    <string name="gejala_4">Gejala 4</string>
    <string name="result_diagnosis">Result Diagnosis</string>
    <string name="penyakit">Penyakit</string>
    <string name="this_is_your_result_diagnosis">This is your result diagnosis</string>
    <string name="text_holder">Text Holder</string>
    <string name="buat_reminder">Buat Reminder</string>
    <string name="rekomendasi_obat">Rekomendasi Obat</string>
    <string name="dosis">Dosis Per Hari</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="hiusername">Hi, %1$s</string>
    <string name="ask">Bagaimana kabarmu hari ini?</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gambar_antibiotic">Gambar Antibiotic</string>
    <string name="deskripsi_obat">Deskripsi Obat</string>
    <string name="nama_antibiotics">Nama Antibiotics</string>
    <string name="click_add_button">Click the plus button to add</string>
    <string name="back">Back</string>
    <string name="detail_antibiotic">Detail Antibiotic</string>
    <string name="button_to_add_reminder">Button to Add Reminder</string>
    <string name="delete">Hapus</string>
    <string name="alarm_time">Waktu Alarm</string>
    <string name="add_unknown_antibiotic">Add Unknown Antibiotic</string>
    <string name="berapa_dosis_per_hari_ex_1x_sehari">Berapa dosis per hari (ex: 1x sehari)</string>
    <string name="dosis_title">Dosis</string>
    <string name="logo_antidot">Logo Antidot</string>
    <string name="button_log_out">Button Log Out</string>
    <string name="duration_of_medication_use">Duration of Medication Use</string>
    <string name="usage">Usage</string>
    <string name="click_for_more_information">Click For More Information</string>
</resources>