<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/diagnosis"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- View dan TextView yang ditambahkan -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:background="@drawable/ic_arrow_back"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/title_template"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:text="@string/diagnosis"
                android:textAppearance="@style/title"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/diagnosis"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/please_fill_diagnosi_form"
                android:textColor="#888"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_subtitle"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/btn_add_symptom"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_below="@+id/recyclerView"
                android:layout_marginTop="21dp"
                android:background="@drawable/primary_color"
                android:layout_centerHorizontal="true"
                android:text="Tambah Gejala" />

            <Button
                android:id="@+id/btn_analyze"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_below="@+id/btn_add_symptom"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@drawable/primary_color"
                android:text="@string/analyze"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_below="@+id/btn_analyze"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:background="@drawable/second_button"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>