<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Reminder.AddReminderByUserActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!-- RelativeLayout untuk tombol back dan title -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/title_template"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/buat_reminder"
            android:textAppearance="@style/title"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_nama_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="47dp"
        android:text="Nama Obat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/obat"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_obat"
        tools:text="Obat" />

    <TextView
        android:id="@+id/tv_dosis_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:text="Dosis Obat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obat" />

    <AutoCompleteTextView
        android:id="@+id/dosis"
        android:layout_width="342dp"
        android:background="@drawable/edit_text_background"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dosis_obat"
        android:hint="@string/berapa_dosis_per_hari_ex_1x_sehari"
        android:focusable="true"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/tv_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:text="Jam Reminder"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dosis" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jam" />

    <Button
        android:id="@+id/btn_save_reminder_user"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/primary_color"
        android:text="Save Reminder"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_jam" />

</androidx.constraintlayout.widget.ConstraintLayout>